# Mechanicca

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  cmakegen.sh
Scripts/CMake/Modules/: FindCppUnit.cmake  FindOpenCascade.cmake  FindSQLite3.cmake
Scripts/Generators/: GenerateParameterTagCollection.py  GeneratePluginVersion.py
